0.04
 [Common]
 - Add 'readme_from' directive to Makefile.PL.
 - Update Module::Install to 1.14 version.

0.03 2013-09-21
 - Add dependency for perl (based on Error::Pure).
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.02 2013-08-31
 - Add README.
 - Fix dependencies.

0.01 2013-08-30
 - First version.